anki-card-template/card.css
/* global parameters */
#card {
	--max-column-width: 30em; /* max column width for text (~30 kana / ~50 latin characters) */
	--spoiler-transition: calc(300ms * var(--global-transition-scale)); /* spoiler hide/unhide transition duration */
	--tag-transition: calc(300ms * var(--global-transition-scale)); /* tag hover/tap expand transition duration */
	--separator-opacity: 20%; /* opacity of the answer separator */
	--separator-weight: 2px; /* layout-dependent width/height of separator */
	--spoiler-blur-padding: 4px; /* padding for the spoiler blur box */
	--text-block-padding: 1em; /* layout-dependent horizontal/vertical padding for text blocks  */
	--text-block-margin: 0.5em; /* layout-dependent horizontal/vertical margin for text blocks */
	--tag-font-size: 80%; /* font size for card tags */
	--subtile-font-size: 75%; /* font size for subtile style (notes, curly braces in translations) */
	--subtile-opacity: 50%; /* font opacity for subtile style */
	--reading-kana-font-size: var(--native-font-size); /* font size of kana in reading field */
	--native-font-size: 1.0rem; /* font size for generic native (latin) text */
	--foreign-font-size: 1.5rem; /* font size for generic foreign (japanese) text */
	--definition-spacing: 0.25em; /* definition spacing (mobile vertical only) */
	--definition-marker-width: 2em; /* definition marker width (mobile vertical only) */
	--definition-marker-height: 2px; /* definition marker height (mobile vertical only) */
	--definition-marker-opacity: 50%; /* definition marker opacity (mobile vertical only) */
	--indicator-stroke-weight: 1px; /* pitch accent / word type indicator stroke weight */
	--sentence-highlight-contrast: 80%; /* opacity of non-highlighted text in sentence */
	--global-transition-scale: 1.0; /* transition duration multiplier */
	--indicator-opacity: 50%; /* opacity of indicators in translations (word type) */
	--pitch-accent-opacity: 70%; /* opacity of pitch accent indicator in reading field */
	--reading-expand-transition: calc(300ms * var(--global-transition-scale)); /* hover expand transition duration for multiple readings */
	--active-transition: calc(80ms * var(--global-transition-scale));

	/* colors */
	--fg: canvastext;
	--fg-alt: buttonface;
	--bg: canvas;
	--bg-alt: buttontext;
}
.mobile #card {
	--text-block-padding: 0.5em;
	--native-font-size: 1.10rem;
	--foreign-font-size: 1.75rem;
}

/* no transitions (accessibility) */
@media (prefers-reduced-motion) {
	#card {
		--global-transition-scale: 0;
	}
}
/* high-contrast (accessibility) */
@media (prefers-contrast: more) {
	.spoiler.hidden .inner { opacity: 100% !important; }
	.spoiler.hidden .outer::after { opacity: 40% !important; }

	.spoiler:not(.inline) .outer,
	.spoiler.inline { border: 2px solid currentColor; }
	.spoiler.inline { margin: -2px; }

	.subtile::before { content: "("; }
	.subtile::after { content: ")"; }

	#card {
		--subtile-opacity: 100%;
		--separator-opacity: 100%;
		--separator-weight: 4px;
		--indicator-opacity: 100%;
		--sentence-highlight-contrast: 100%;
		--pitch-accent-opacity: 100%;
	}
	.night_mode #target-word-reading .indicator::before {
		background-color: transparent !important;
		box-shadow: inset 0 0 0 2px currentColor;
		opacity: 100% !important;
	}

	#card #back #tags { opacity: 1 !important; }
	#tags .tag { background-color: currentColor !important; }
	#tags .tag .inner { padding-left: 0; }
	#card #back #tags:active .tag .inner,
	#card #back #tags:hover .tag .inner { padding-left: 1em; }
	#tags .tag .inner:before { background: var(--tag-color-dark); }
	.night_mode #tags .tag .inner:before { background: var(--tag-color-light); }
	#tags .tag .inner:before {
		position: absolute;
		left: 0.25em;
		top: 50%;
		content: "";
		width: 1em;
		height: 1em;
		border-radius: 99999px;
		transform: translate(-50%,-50%);
	}
}

/* default fonts */
body {
	font-family: "Inter", "Hiragino Kaku Gothic ProN", sans-serif;
	font-weight: 400;
}

/* increase contrast of highlighted word */
#card #sentence.has-b > * { opacity: var(--sentence-highlight-contrast); }
#card #sentence.has-b > b { opacity: 100%; }

/* body margin */
body {
	margin: 0;
	width: 100vw;
	height: 100vh;
}
/* remove AnkiDroid margin (causes little overscroll) */
.mobile #content { margin: 0; }

/* vertical center card in body */
body {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* default font sizes (desktop) */
#card .foreign { font-size: var(--foreign-font-size); }
#card .native { font-size: var(--native-font-size); }

/* default text alignment and layout */
#card { text-align: center; }
#card > * > span { display: block; }

/* separator defaults */
#separator {
	border: none;
	opacity: var(--separator-opacity);
	margin: 0;
	background-color: currentColor;
}

/* separator size */
#card.horizontal-layout #separator { height: var(--separator-weight); }
#card.vertical-layout #separator { width: var(--separator-weight); }

/* hide answer and separator on card front */
#card.front #back,
#card.front hr { display: none !important; }

/* hide furigana but don't shift layout */
#card.front ruby rt.hidden { visibility: hidden; }

/* don't select furigana when selecting text */
rt { user-select: none; }

/* extra space above complete translated sentence */
#card #back #sentence-translation { margin-top: 2em; }

/* blur spoiler */
.spoiler { cursor: pointer; }
.spoiler .outer {
	margin: 0 auto;
	display: inline-block;
	position: relative;
	border-radius: 8px;
	overflow: hidden;
	padding: var(--spoiler-blur-padding);
}
.spoiler .outer::after {
	content: "";
	position: absolute;
	inset: 0;
	background-color: gray;
}
.spoiler .inner {
	transition-property: filter, opacity;
	transition-duration: var(--spoiler-transition);
}
.spoiler.hidden .inner { filter: blur(0.6rem); opacity: 75%; }
.spoiler.visible .inner { filter: blur(0rem); opacity: 100%; }
.spoiler .outer::after { transition: opacity var(--spoiler-transition); }
.spoiler.hidden .outer::after { opacity: 25%; }
/* ... */

